Auto maximized, Enter connects and stuff
Ho gestito l'auto maximized per l'editor, ho aggiunto un po' di connect per i pigri come me che premono invio anzichè andare a premere i pulsanti, ed altra roba che non ricordo

--- a/CLIENT/GUI/editorWindow/ui/gui_usersbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_usersbar.ui
@@ -222,15 +222,27 @@
          </property>
          <item>
           <widget class="QLabel" name="label_2">
+           <property name="cursor">
+            <cursorShape>IBeamCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Contributors:</string>
+           </property>
+           <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="numberContributorUsersLabel">
+           <property name="cursor">
+            <cursorShape>IBeamCursor</cursorShape>
+           </property>
            <property name="text">
             <string>0</string>
+           </property>
+           <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
            </property>
           </widget>
          </item>
