--- a/CLIENT/GUI/editorWindow/ui/gui_editor.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_editor.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="spacing">
+    <number>12</number>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -160,7 +163,7 @@ border-color: rgb(220, 220, 0);
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,5,1">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3,1">
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
