--- a/CLIENT/GUI/ui/gui_opendoc.ui
+++ b/CLIENT/GUI/ui/gui_opendoc.ui
@@ -30,7 +30,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string>Accessibile documents</string>
+          <string>Accessible documents</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
