--- a/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
@@ -42,6 +42,7 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="getURIAction"/>
     <addaction name="closeDocumentAction"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
@@ -74,6 +75,11 @@
   <action name="actionPaste">
    <property name="text">
     <string>Paste</string>
+   </property>
+  </action>
+  <action name="getURIAction">
+   <property name="text">
+    <string>Get URI</string>
    </property>
   </action>
  </widget>
