--- a/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
@@ -14,27 +14,52 @@
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="spacing">
+    <number>11</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QPushButton" name="pushButton_12">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Undo.svg</normaloff>:/editor/text_editor/Undo.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_13">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Redo.svg</normaloff>:/editor/text_editor/Redo.svg</iconset>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="undoPushButton">
+       <property name="toolTip">
+        <string>Undo</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Undo.svg</normaloff>:/editor/text_editor/Undo.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="redoPushButton">
+       <property name="toolTip">
+        <string>Redo</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Redo.svg</normaloff>:/editor/text_editor/Redo.svg</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="Line" name="line">
@@ -44,37 +69,50 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton_9">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Cut.svg</normaloff>:/editor/text_editor/Cut.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_10">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Copy.svg</normaloff>:/editor/text_editor/Copy.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_11">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Paste.svg</normaloff>:/editor/text_editor/Paste.svg</iconset>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="cutPushButton">
+       <property name="toolTip">
+        <string>Cut</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Cut.svg</normaloff>:/editor/text_editor/Cut.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="copyPushButton">
+       <property name="toolTip">
+        <string>Copy</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Copy.svg</normaloff>:/editor/text_editor/Copy.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pastePushButton">
+       <property name="toolTip">
+        <string>Paste</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Paste.svg</normaloff>:/editor/text_editor/Paste.svg</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="Line" name="line_2">
@@ -84,48 +122,64 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton_5">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/LeftAlign.svg</normaloff>:/editor/text_editor/LeftAlign.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_6">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/CentralAlign.svg</normaloff>:/editor/text_editor/CentralAlign.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_7">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/RightAlign.svg</normaloff>:/editor/text_editor/RightAlign.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_8">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/JustifiedAlign.svg</normaloff>:/editor/text_editor/JustifiedAlign.svg</iconset>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <widget class="QPushButton" name="alignLeftPushButton">
+       <property name="toolTip">
+        <string>Align Left</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/LeftAlign.svg</normaloff>:/editor/text_editor/LeftAlign.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="alignCenterPushButton">
+       <property name="toolTip">
+        <string>Align Center</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/CentralAlign.svg</normaloff>:/editor/text_editor/CentralAlign.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="alignRightPushButton">
+       <property name="toolTip">
+        <string>Align Right</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/RightAlign.svg</normaloff>:/editor/text_editor/RightAlign.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="alignJustifiedPushButton">
+       <property name="toolTip">
+        <string>Align Justified</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/JustifiedAlign.svg</normaloff>:/editor/text_editor/JustifiedAlign.svg</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="Line" name="line_3">
@@ -135,48 +189,64 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Italic.svg</normaloff>:/editor/text_editor/Italic.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Bold.svg</normaloff>:/editor/text_editor/Bold.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_3">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/Underlined.svg</normaloff>:/editor/text_editor/Underlined.svg</iconset>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton_4">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../images/images.qrc">
-       <normaloff>:/editor/text_editor/StrikeThrough.svg</normaloff>:/editor/text_editor/StrikeThrough.svg</iconset>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QPushButton" name="italicPushButton">
+       <property name="toolTip">
+        <string>Italic</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Italic.svg</normaloff>:/editor/text_editor/Italic.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="boldPushButton">
+       <property name="toolTip">
+        <string>Bold</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Bold.svg</normaloff>:/editor/text_editor/Bold.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="underlinedPushButton">
+       <property name="toolTip">
+        <string>Underlined</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/Underlined.svg</normaloff>:/editor/text_editor/Underlined.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="strikethroughPushButton">
+       <property name="toolTip">
+        <string>Strikethrough</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/StrikeThrough.svg</normaloff>:/editor/text_editor/StrikeThrough.svg</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="Line" name="line_4">
@@ -187,8 +257,8 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="fontHorizontalLayout">
-     <property name="rightMargin">
-      <number>20</number>
+     <property name="spacing">
+      <number>3</number>
      </property>
      <item>
       <widget class="QLabel" name="label">
@@ -204,6 +274,9 @@
          <height>16</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Font Size</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -218,6 +291,13 @@
      <item>
       <widget class="QSpinBox" name="spinBox"/>
      </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_6">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="maximumSize">
@@ -225,6 +305,9 @@
          <width>16</width>
          <height>16</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Font Color</string>
        </property>
        <property name="text">
         <string/>
@@ -234,6 +317,17 @@
        </property>
        <property name="scaledContents">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="colorPushButton">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../images/images.qrc">
+         <normaloff>:/editor/text_editor/TextColor.svg</normaloff>:/editor/text_editor/TextColor.svg</iconset>
        </property>
       </widget>
      </item>
