--- a/CLIENT/GUI/ui/gimpdocs.ui
+++ b/CLIENT/GUI/ui/gimpdocs.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>GIMPdocs</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QMainWindow{background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(122, 158, 126, 255), stop:1 rgba(198, 255, 194, 255));}
+</string>
+  </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -24,7 +28,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
