--- a/CLIENT/GUI/ui/gui_menu.ui
+++ b/CLIENT/GUI/ui/gui_menu.ui
@@ -108,41 +108,23 @@
         <property name="currentIndex">
          <number>0</number>
         </property>
-        <widget class="QWidget" name="newdocTab">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
+        <widget class="QWidget" name="opendocTab">
+         <property name="autoFillBackground">
+          <bool>true</bool>
          </property>
+         <attribute name="title">
+          <string>Accessible documents</string>
+         </attribute>
+         <layout class="QGridLayout" name="gridLayout_2"/>
+        </widget>
+        <widget class="QWidget" name="newdocTab">
          <property name="autoFillBackground">
           <bool>true</bool>
          </property>
          <attribute name="title">
           <string>New document</string>
          </attribute>
-        </widget>
-        <widget class="QWidget" name="opendocTab">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="autoFillBackground">
-          <bool>true</bool>
-         </property>
-         <attribute name="title">
-          <string>Open document</string>
-         </attribute>
-        </widget>
-        <widget class="QWidget" name="forgetdocTab">
-         <property name="autoFillBackground">
-          <bool>true</bool>
-         </property>
-         <attribute name="title">
-          <string>Forget document</string>
-         </attribute>
+         <layout class="QGridLayout" name="gridLayout_3"/>
         </widget>
        </widget>
       </item>
